# emulatorSignal

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt
src/genCos/: CMakeLists.txt  generatorcos.cpp  generatorcos.h
src/lib/: CMakeLists.txt
src/lib/generator/: CMakeLists.txt  basegenerator.cpp  basegenerator.h  customgeneratorparametrs.cpp  customgeneratorparametrs.h  generatoram.cpp  generatoram.h  generatoramparametrs.cpp  generatoramparametrs.h  generatorcos.cpp  generatorcos.h  generatorgaussnoise.cpp  generatorgaussnoise.h  generatorgaussnoiseparametrs.cpp  generatorgaussnoiseparametrs.h
src/lib/qcustomplot/: CMakeLists.txt  qcustomplot.cpp  qmlqcustomplot.cpp  qmlqcustomplot.h
src/qcustomplot/: CMakeLists.txt  qmlqcustomplot.cpp  qmlqcustomplot.h
src/qml/: main.qml
src/ui/: CMakeLists.txt
src/ui/generatorbackend/: CMakeLists.txt  generatorbackend.cpp  generatorbackend.h
src/ui/generatorbackend/model/: emullistmodel.cpp
src/ui/model/: emullistmodel.h
src/ui/qml/: CMakeLists.txt  GeneratorPage.qml  PlotView.qml  main.qml
